Opened 13 years ago

Closed 13 years ago

#7693 closed bug (fixed)

possible regression in the wait() family of functions

Reported by: augiedoggie Owned by: bonefish
Priority: normal Milestone: R1
Component: System/Kernel Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

It seems several apps are getting errors concerning the wait/waitpid functions. I have noticed this in zsh and rsync. This is on hrev42186. I haven't had time yet to track down the offending revision or the cause, but I assume it's due to the signal related changes in the kernel.

cpr@gumby:~$ rsync .profile .profile2
rsync: waitpid: Operation would block (-2147483637)
rsync error: waitpid() failed (code 21) at main.c(1042) [sender=3.0.7]

and things like

cpr@gumby:~# ls | less
[1]  + 100836 done                   ls --color=auto | 
       100837 suspended (tty input)  less
zsh: wait failed: operation would block

Both of these were working previously and I did test rebuilding both of them.

Change History (1)

comment:1 by bonefish, 13 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev42188.

Note: See TracTickets for help on using tickets.