waitpid(): Fixed regression introduced with my signals changes: When WNOHANG was specified the syscall error code B_WOULD_BLOCK would no longer be mapped to 0. Fixes #7693.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42188 a95241bf-73f2-0310-859d-f6bbb57e9c96